# angry-heads

./: .gitignore  README.md  angry-heads.cabal  stack.yaml
app/: Main.hs
client/src/: Main.elm  Model.elm  Update.elm  View.elm
scripts/: BuildIt.hs
src/: AngryHeads.hs  Jsons.hs  Main.hs  Options.hs  Static.hs
src/Network/HeadHunter/: Types.hs
static/: index.html
test/: HeadHunterSpec.hs
test/hh_responses/: resumes.json
