name:                angry-heads
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/angry-heads#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable build-it
  hs-source-dirs:      scripts
  main-is:             BuildIt.hs
  default-language:    Haskell2010
  ghc-options:         -Werror -Wall
  build-depends:       base >= 4.7 && < 5,
                       turtle,
                       fsnotify

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Werror -Wall
  other-modules:       Options, Static, Jsons
  build-depends:       base >= 4.7 && < 5,
                       http-types, wai, warp,
                       wai-extra,
                       wai-middleware-static,
                       scotty, cookie, blaze-builder,
                       turtle,
                       http-client, http-conduit, http-client-tls,
                       text, aeson, bytestring, mtl
