name:                angry-heads
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/angry-heads#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HeadHunterSpec
  default-language:    Haskell2010
  ghc-options:         -Werror -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       aeson, bytestring,
                       angry-heads

executable build-it
  hs-source-dirs:      scripts
  main-is:             BuildIt.hs
  default-language:    Haskell2010
  ghc-options:         -Werror -Wall
  build-depends:       base >= 4.7 && < 5,
                       turtle,
                       fsnotify

executable server
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Werror -Wall
  build-depends:       base >= 4.7 && < 5,
                       warp, wai, wai-extra, scotty,
                       angry-heads

library
  hs-source-dirs:      src
  exposed-modules:     AngryHeads
                     , Options
                     , Static
                     , Network.HeadHunter.Types
  default-language:    Haskell2010
  ghc-options:         -Werror -Wall
  build-depends:       base >= 4.7 && < 5,
                       http-types, wai, warp,
                       wai-middleware-static,
                       scotty, cookie, blaze-builder,
                       scotty-cookie, turtle,
                       http-client, http-conduit, http-client-tls,
                       text, aeson, bytestring, mtl, vector
